--- a/src/component/stylesheets/contact.css
+++ b/src/component/stylesheets/contact.css
@@ -49,4 +49,36 @@
     }
   }
   
- 
+  .contact-upper{
+    background-image: url('../images/contact.jpeg');
+    /* height: 150px; */
+    width: 100%;
+    background-repeat: no-repeat;
+    padding-left: 20px;
+    background-size: 100% 100%;
+    /* opacity: 0.9; */
+    top: 0px;
+
+}
+
+@media (min-width: 320px)  {
+  .contact-img-text h1{
+    padding-right: 100px!important;
+    text-align: center!important
+  }
+}
+@media (min-width: 800px)  {
+  .contact-img-text {
+    padding: 100px;
+  }
+}
+.contact-img-text {
+    padding: 150px;
+    text-align: center;
+    color: #ffffff;
+}
+.contact-img-text h1{
+   text-align: center;
+    color: #ffffff;
+    font-weight: 700
+}
