--- a/src/component/stylesheets/about.css
+++ b/src/component/stylesheets/about.css
@@ -1,25 +1,56 @@
 .about-upper{
-    background: url('../images/about.jpeg');
-    height: 100%;
+    background-image: url('../images/about.jpg');
+    height: fit-content;
     width: 100%;
     background-repeat: no-repeat;
     padding-left: 20px;
-    background-size: 100%;
-    opacity: 0.5;
+    background-size: 100% 100%;
+    /* opacity: 0.9; */
     top: 0px;
 
 }
 .about-img-text {
-    padding: 150px;
+    padding: 180px;
     color: #ffffff;
 }
-.about-img-text p,h3{
+.about-img-text p,h1{
     /* padding: 150px; */
+    text-align: center;
     color: #ffffff;
-    font-weight: 700
+    font-weight: 700;
+    /* color: #db5a27; */
 }
+
+
 @media  (min-width: 800px){
     .about-upper{
         width: 100%
     }
+}
+
+.sec-2{
+    padding-top: 50px;
+}
+.meet{
+    text-align: center;
+    padding: 70px 0
+}
+.team-top{
+
+}
+.team{
+    display: inline-block;
+    height: fit-content;
+    transition: 0.5s;    
+    border-radius: 4px;    
+}
+.team:hover{box-shadow: -1px 2px 18px 4px  #888;}
+.team img{border-radius: 200px; margin: 29px 0px}
+.succes p{
+    color: #606d75;    
+}
+.succes{
+    margin-top: 180px;
+    margin-bottom: 100px;
+    text-align: center
 }
