--- a/src/component/stylesheets/about.css
+++ b/src/component/stylesheets/about.css
@@ -43,9 +43,11 @@
     height: fit-content;
     transition: 0.5s;    
     border-radius: 4px;    
+    padding-bottom: 30px;
 }
 .team:hover{box-shadow: -1px 2px 18px 4px  #888;}
 .team img{border-radius: 200px; margin: 29px 0px}
+
 .succes p{
     color: #606d75;    
 }
