--- a/src/component/stylesheets/home.css
+++ b/src/component/stylesheets/home.css
@@ -7,3 +7,131 @@
     background-color: transparent!important;
     /* height: 5px; */
 }
+.sec-2{
+    padding-top: 150px;
+    /* height: fit-content; */
+}
+
+.my-btn{
+    background-color: transparent;
+    background: transparent!important;
+    border: 2px solid #1ebbd7!important
+}
+.my-btn:hover{
+    background: #1ebbd7!important;
+    color: #c72626!important
+}
+.about-btn{
+    margin-top: 190px;
+    margin-right: -200px;
+    text-align: right;
+    /* align-items: flex-end */
+}
+.sec-3{
+    margin-top: 150px;
+}
+.new-home-div{
+    
+    background-color: #41cee7;
+    height: 600px;
+}
+.new-home{
+    font-size: 2.009em;
+    font-weight: 700;
+    color: #2e3e49;
+    position: absolute;
+    bottom: 200px;
+    left: 50px;
+    color: #fff
+   /* justify-content: flex-start */
+
+}
+.new-home-p{
+    /* font-size: 1.789em; */
+    /* font-weight: 700; */
+    color: #2e3e49;
+    position: absolute;
+    bottom: 40px;
+    left: 50px;
+    color: rgb(253, 250, 250)
+   /* justify-content: flex-start */
+
+}
+.new-home span{
+    position: absolute;
+    display: block;
+    top: 40px;
+    left: 0px;
+}
+.new-home-div-2{
+    background: url('../images/home6.jpeg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    opacity: 0.9
+
+}
+.new-home p{
+    color: white;
+}
+.new-home-div-3{
+    background-repeat: no-repeat!important;
+    /* height: 100%; */
+    background-size: 100% 100%;
+    background: url('../images/home5.jpeg')
+}
+
+.sec-4{
+    margin-top: 100px;
+}
+
+.sec-5{
+    margin-top: 150px;
+}
+.property-btn{
+    margin-top: 80px;
+    margin-right: -200px;
+    text-align: right;
+}
+.feature-1 {
+    background-image: url('../images/h2.jpeg');
+    background-size: 100% 100%;
+    height: 320px;
+}
+.feature-1-div{
+    /* position: absolute;
+    left: 0px;
+    top: 0px; */
+}
+.feature-2{
+    background-image: url('../images/h1.jpeg');
+    background-size: 100% 100%;
+    height: 320px;
+}
+.feature-3{
+    background-image: url('../images/h3.jpeg');
+    background-size: 100% 100%;
+    height: 320px;
+}
+.feature-4{
+    background-image: url('../images/h4.jpeg');
+    background-size: 100% 100%;
+    height: 320px;
+}
+.actions li {
+    display: inline;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 4px;
+    background-color: #000;
+    opacity: .6;
+    text-align: center;
+}
+@media (min-wdth: 360px){
+    .about-btn{
+        text-align: center;
+        margin-right: 20px;
+        margin-top: 0px;
+    }
+}
+
