home almost completed header done

--- a/src/component/stylesheets/footer.css
+++ b/src/component/stylesheets/footer.css
@@ -48,7 +48,7 @@ p{
   }
 
 .fa-facebook {
-    /* padding-right: 2px; */
+    padding-top: 5px;
     margin-left: 10px;
     background: #272121;
     color: white;
