--- a/src/component/stylesheets/home.css
+++ b/src/component/stylesheets/home.css
@@ -12,7 +12,8 @@ body{
     /* height: 5px; */
 }
 .sec-2{
-    padding-top: 150px;
+    padding-top: 200px;
+    padding-bottom: 10px;
     /* height: fit-content; */
 }
 
