--- a/src/component/stylesheets/home.css
+++ b/src/component/stylesheets/home.css
@@ -11,6 +11,7 @@ body{
     /* height: 700px; */
     z-index: -1;
     background-size: 100% 100%;
+    position: relative;
 }
 .carousel-item{
     /* height: 700px; */
@@ -74,6 +75,9 @@ body{
     color: rgb(253, 250, 250)
    /* justify-content: flex-start */
 
+}
+.new-home-p:hover{
+    background: black; border-radius: 5px;height: fit-content;opacity: 0.7;width: 200px;
 }
 .new-home span{
     position: absolute;
